animation mobile fixed

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -905,13 +905,13 @@ li {
 }
 .menu__animationselected {
   background-color: #99E2D0;
-  padding: 8vw;
+  padding: 28px;
   border-top-right-radius: 25px;
   border-bottom-right-radius: 25px;
   transform: scale(0);
-  margin-top: -22px;
-  margin-left: 25%;
-  height: 3.5vw;
+  margin-top: -12px;
+  margin-left: 30%;
+  height: 22px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -930,7 +930,7 @@ li {
 .menu__prix {
   font-weight: bold;
   position: relative;
-  left: 77%;
+  left: 61%;
   top: 58px;
 }
 .menu__prix__trigger {
@@ -939,7 +939,7 @@ li {
   bottom: 83px;
   width: 35%;
   height: 88px;
-  left: 64%;
+  left: 67%;
 }
 .menu__choix {
   background-color: #f6f6f6;
@@ -1022,21 +1022,20 @@ li {
   border-radius: 19px;
   padding-left: 9px;
   margin-bottom: 3%;
-  height: 19vw;
+  height: 77px;
   display: flex;
   flex-direction: column;
   width: 96%;
-  margin-left: 6px;
 }
 .menu__epd__item__titreplat {
   font-weight: bold;
-  font-size: 4vw;
+  font-size: 91%;
 }
 .menu__epd__item__descriptionprix {
   display: grid;
   grid-template-columns: 83% 1% 33%;
   margin-top: 0px;
-  font-size: 3.5vw;
+  font-size: 82%;
 }
 .menu__epd__item:hover .menu__epd__item__descriptionprix {
   animation: menuprixitem 300ms linear;
@@ -1419,7 +1418,7 @@ li {
     margin-right: -1%;
   }
 }
-@media screen and (min-width: 600px) and (max-width: 1366px) {
+@media screen and (min-width: 541px) and (max-width: 1366px) {
   .imgrestomenu {
     max-width: 100%;
     width: 60%;
